--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                                     <li><span>Canva</span></li> -->
                                 </ul>
                             </div>
-                            <a href="assets/images/documents/cv-jobstreet-marshella.pdf" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Downlaod CV <i class="fa fa-download"></i></a>
+                            <a href="assets/images/documents/CV_Marshella Zalia.pdf" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Downlaod CV <i class="fa fa-download"></i></a>
                         </div>
                     </div>
                 </div>
